--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
   <title>wedding-inv</title>
   <link rel="shortcut icon" href="./—Pngtree—marriage clipart cute wedding couple_11072015.png" type="image/x-icon">
-
+  <link rel="icon" href="./—Pngtree—marriage clipart cute wedding couple_11072015.png" />
 </head>
 
 <body>
