--- a/rana-mustafa/index.html
+++ b/rana-mustafa/index.html
@@ -9,7 +9,8 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
   <title>wedding-inv</title>
-
+  <link rel="shortcut icon" href="./—Pngtree—marriage clipart cute wedding couple_11072015.png" type="image/x-icon">
+  <link rel="icon" href="./—Pngtree—marriage clipart cute wedding couple_11072015.png" />
 </head>
 
 <body>
