--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="col-md-12">
           <div class="names">
             <div class="man">
-              <h1>mustafa</h1>
+              <h1>Mustafa</h1>
             </div>
             <div class="and">
               <img src="imgbin_ampersand-typography-lettering-font-png.png" class="img">
@@ -47,7 +47,7 @@
               <div class="container">
                 <div class="row">
                   <div class="copy">
-                    &copy; 2024 | | created by M&H Developer 
+                    &copy; 2024 | | created by M&H Development 
                   </div>
                 </div>
               </div>
@@ -55,13 +55,7 @@
           </div>
         </div>
     </div>
-
   </section>
-
-
-
-
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
